--- a/code/app/src/main/res/layout/compose_notifications.xml
+++ b/code/app/src/main/res/layout/compose_notifications.xml
@@ -5,43 +5,27 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="100dp" />
-
-    <include
-        android:id="@+id/organizer_tab"
-        layout="@layout/organizer_tab"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             android:orientation="vertical"
-            android:padding="16dp"
-            android:background="@color/white">
+            android:padding="16dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/back_arrow"
@@ -55,50 +39,52 @@
                     android:layout_weight="1"
                     android:text="Notification Center"
                     android:textAlignment="center"
+                    android:textColor="@android:color/black"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:textColor="@android:color/black"/>
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:text="Compose Notification"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:layout_marginTop="16dp"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Send a message to your event entrants"/>
+                android:text="Send a message to your event entrants" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:text="Select Recipients"
                 android:textColor="@color/black"
-                android:layout_marginTop="16dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <!-- Waiting List Entrants Card -->
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="8dp"
-                android:layout_marginTop="8dp">
+                android:layout_marginTop="8dp"
+                app:cardCornerRadius="8dp">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="16dp"
-                    android:background="@color/white">
+                    android:background="@color/white"
+                    android:padding="16dp">
+
                     <RadioButton
                         android:id="@+id/radioWaitingList"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:checked="true"/>
+                        android:checked="true" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -125,7 +111,7 @@
 
                     <Button
                         android:id="@+id/waitingListCount"
-                        android:layout_width="54dp"
+                        android:layout_width="56dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
@@ -141,18 +127,20 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="8dp"
-                android:layout_marginTop="8dp">
+                android:layout_marginTop="8dp"
+                app:cardCornerRadius="8dp">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="16dp"
-                    android:background="@color/white">
+                    android:background="@color/white"
+                    android:padding="16dp">
+
                     <RadioButton
                         android:id="@+id/radioChosenEntrants"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"/>
+                        android:layout_centerVertical="true" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -165,7 +153,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Chosen Entrants"
                             android:textColor="@android:color/black"
@@ -179,7 +167,7 @@
 
                     <Button
                         android:id="@+id/chosenCount"
-                        android:layout_width="54dp"
+                        android:layout_width="56dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
@@ -195,18 +183,20 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="8dp"
-                android:layout_marginTop="8dp">
+                android:layout_marginTop="8dp"
+                app:cardCornerRadius="8dp">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="16dp"
-                    android:background="@color/white">
+                    android:background="@color/white"
+                    android:padding="16dp">
+
                     <RadioButton
                         android:id="@+id/radioCancelledEntrants"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"/>
+                        android:layout_centerVertical="true" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -219,24 +209,25 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:layout_width="134dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Cancelled \nEntrants"
+                            android:text="Cancelled Entrants"
                             android:textColor="@android:color/black"
                             android:textStyle="bold" />
 
                         <TextView
-                            android:layout_width="144dp"
+                            android:layout_width="match_parent"
                             android:layout_height="33dp"
                             android:text="Declined or expired registrations" />
                     </LinearLayout>
-                     <Button
+
+                    <Button
                         android:id="@+id/cancelledCount"
-                         android:layout_width="54dp"
-                         android:layout_height="wrap_content"
+                        android:layout_width="56dp"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
-                         android:layout_marginEnd="4dp"
+                        android:layout_marginEnd="4dp"
                         android:backgroundTint="@color/background_grey"
                         android:drawableTop="@drawable/group"
                         android:text="0"
@@ -247,36 +238,35 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:text="Message"
                 android:textColor="@color/black"
-                android:layout_marginTop="16dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/messageEditText"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
-                android:hint="Enter your notification message..."
-                android:gravity="top"
-                android:padding="16dp"
+                android:layout_marginTop="8dp"
                 android:backgroundTint="@color/background_grey"
-                android:layout_marginTop="8dp"/>
+                android:gravity="top"
+                android:hint="Enter your notification message..."
+                android:padding="16dp" />
 
             <TextView
                 android:id="@+id/characterCount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="0 characters"
-                android:layout_marginTop="4dp"/>
+                android:layout_marginTop="4dp"
+                android:text="0 characters" />
 
             <Button
                 android:id="@+id/sendNotificationButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Send to chosen Recipients"
                 android:drawableLeft="@drawable/notify"
-                />
+                android:text="Send to chosen Recipients" />
 
         </LinearLayout>
     </ScrollView>
