--- a/code/app/src/main/res/layout/organizer_dashboard_empty.xml
+++ b/code/app/src/main/res/layout/organizer_dashboard_empty.xml
@@ -1,74 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@android:color/white"
+    tools:context=".OrganizerDashboardActivity"
+    android:id="@+id/main"  >
 
-    <LinearLayout
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="16dp"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="100dp" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="0dp"
-            android:layout_height="38dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/light_purple"
-            android:text="Active"
-            android:textColor="@color/text_color"
-            android:padding="0dp"
-            />
+    <include
+        android:id="@+id/organizer_tab"
+        layout="@layout/organizer_tab"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="0dp"
-            android:layout_height="38dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/background_grey"
-            android:text="Closed"
-            android:textColor="@color/text_color"
-            android:padding="0dp"/>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_constraintBottom_toTopOf="@id/page_selector"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/organizer_tab"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/button6"
-            android:layout_width="0dp"
-            android:layout_height="38dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/background_grey"
-            android:text="Ongoing"
-            android:textColor="@color/text_color"
-            android:padding="0dp"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="16dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="0dp"
+                android:layout_height="38dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/light_purple"
+                android:text="Active"
+                android:textColor="@color/text_color"
+                android:padding="0dp"
+                />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="0dp"
+                android:layout_height="38dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/background_grey"
+                android:text="Closed"
+                android:textColor="@color/text_color"
+                android:padding="0dp"/>
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_width="0dp"
+                android:layout_height="38dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/background_grey"
+                android:text="Ongoing"
+                android:textColor="@color/text_color"
+                android:padding="0dp"/>
+
 
         </LinearLayout>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        app:cardBackgroundColor="#F2F2F2"
-        app:cardCornerRadius="24dp"
-        app:cardElevation="0dp">
-
-        <LinearLayout
-            android:id="@+id/event_card_section"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:cardBackgroundColor="#F2F2F2"
+            app:cardCornerRadius="24dp"
+            app:cardElevation="0dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
-                android:text="No Active Events to\ndisplay right now."
-                android:textAlignment="center"
-                android:textColor="#494949"
-                android:textSize="16sp" />
+            <LinearLayout
+                android:id="@+id/event_card_section"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="24dp"
+                    android:text="No Active Events to\ndisplay right now."
+                    android:textAlignment="center"
+                    android:textColor="#494949"
+                    android:textSize="16sp" />
 
                 <Button
                     android:id="@+id/create_event_button"
@@ -77,8 +108,27 @@
                     android:text="Create Event"
                     app:backgroundTint="@color/light_purple"
                     app:cornerRadius="16dp" />
+                <Button
+                    android:id="@+id/notification_debug_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Notification test"
+                    app:backgroundTint="@color/light_purple"
+                    app:cornerRadius="16dp" />
+
             </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+    </LinearLayout>
+
+    <include
+        android:id="@+id/page_selector"
+        layout="@layout/page_selector"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/organizer_tab" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
