--- a/code/app/src/main/res/layout/organizer_dashboard_empty.xml
+++ b/code/app/src/main/res/layout/organizer_dashboard_empty.xml
@@ -9,31 +9,14 @@
     android:id="@+id/main"  >
 
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="100dp" />
-
-    <include
-        android:id="@+id/organizer_tab"
-        layout="@layout/organizer_tab"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
         android:padding="16dp"
-        app:layout_constraintBottom_toTopOf="@id/page_selector"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/organizer_tab"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
@@ -49,10 +32,9 @@
                 android:layout_height="38dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/light_purple"
-                android:text="Active"
-                android:textColor="@color/text_color"
                 android:padding="0dp"
-                />
+                android:text="Active"
+                android:textColor="@color/text_color" />
 
             <Button
                 android:id="@+id/button5"
@@ -60,9 +42,9 @@
                 android:layout_height="38dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/background_grey"
+                android:padding="0dp"
                 android:text="Closed"
-                android:textColor="@color/text_color"
-                android:padding="0dp"/>
+                android:textColor="@color/text_color" />
 
             <Button
                 android:id="@+id/button6"
@@ -70,9 +52,9 @@
                 android:layout_height="38dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/background_grey"
+                android:padding="0dp"
                 android:text="Ongoing"
-                android:textColor="@color/text_color"
-                android:padding="0dp"/>
+                android:textColor="@color/text_color" />
 
 
         </LinearLayout>
@@ -108,6 +90,7 @@
                     android:text="Create Event"
                     app:backgroundTint="@color/light_purple"
                     app:cornerRadius="16dp" />
+
                 <Button
                     android:id="@+id/notification_debug_button"
                     android:layout_width="wrap_content"
@@ -121,14 +104,5 @@
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
-
-    <include
-        android:id="@+id/page_selector"
-        layout="@layout/page_selector"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/organizer_tab" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
