Did the waiting list view

--- a/code/app/src/main/res/layout/manage_event.xml
+++ b/code/app/src/main/res/layout/manage_event.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    android:id="@+id/main">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -56,7 +57,7 @@
                 android:id="@+id/eventTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Community Table Tennis"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -75,14 +76,16 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="22nd of September 2025 (placholder)" />
+                android:textColor="@color/black"
+                android:text="" />
 
             <TextView
                 android:id="@+id/eventLocation"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="104st Jasper Ave, Edmonton, Canada (placeholder)"
+                android:textColor="@color/black"
+                android:text=""
                 />
         </LinearLayout>
 
@@ -119,9 +122,10 @@
                         android:textSize="16sp"
                         android:textColor="@android:color/black"/>
                     <TextView
+                        android:id="@+id/waitingListCount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="8"
+                        android:text="0"
                         android:textSize="24sp"
                         android:textStyle="bold"
                         android:textColor="@android:color/black"/>
@@ -136,7 +140,8 @@
                 android:layout_rowWeight="1"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
-                app:cardUseCompatPadding="true">
+                app:cardUseCompatPadding="true"
+                app:cardBackgroundColor="@color/background_grey">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -152,7 +157,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="3"
+                        android:text="0"
                         android:textSize="24sp"
                         android:textStyle="bold"
                         android:textColor="@android:color/black"/>
@@ -167,7 +172,8 @@
                 android:layout_rowWeight="1"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
-                app:cardUseCompatPadding="true">
+                app:cardUseCompatPadding="true"
+                app:cardBackgroundColor="@color/background_grey">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -183,7 +189,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="2"
+                        android:text="0"
                         android:textSize="24sp"
                         android:textStyle="bold"
                         android:textColor="@android:color/black"/>
@@ -198,7 +204,8 @@
                 android:layout_rowWeight="1"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
-                app:cardUseCompatPadding="true">
+                app:cardUseCompatPadding="true"
+                app:cardBackgroundColor="@color/background_grey">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -214,7 +221,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="4"
+                        android:text="0"
                         android:textSize="24sp"
                         android:textStyle="bold"
                         android:textColor="@android:color/black"/>
@@ -229,6 +236,7 @@
             android:layout_height="wrap_content"
             android:text="Draw Lottery"
             android:drawableLeft="@drawable/dice"
+            android:textColor="@color/white"
             android:layout_margin="16dp"/>
 
         <LinearLayout
@@ -246,6 +254,7 @@
                 android:drawableLeft="@drawable/notify"
                 android:layout_weight="1"
                 android:text="Notify"
+                android:textColor="@color/white"
                 android:layout_marginEnd="8dp"/>
 
             <Button
@@ -255,25 +264,32 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Show map"
+                android:textColor="@color/white"
                 android:layout_marginStart="8dp"/>
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/waitingListViewCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardUseCompatPadding="true"
-            app:cardCornerRadius="8dp">
+            app:cardCornerRadius="8dp"
+            android:visibility="gone"
+            app:cardElevation="8dp"
+            app:cardBackgroundColor="@color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="16dp">
+                android:padding="16dp"
+                android:background="@color/white">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:background="@color/white">
 
                     <TextView
                         android:id="@+id/listTitle"
@@ -281,6 +297,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:text="Waiting List"
+                        android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
