--- a/code/app/src/main/res/layout/entrant_event_details.xml
+++ b/code/app/src/main/res/layout/entrant_event_details.xml
@@ -247,5 +247,28 @@
                 android:text="Leave Waitlist"
                 android:textColor="@color/light_purple" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="148dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Prefrences:"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+
+            <CheckBox
+                android:id="@+id/optOutCheckBox"
+                android:layout_width="322dp"
+                android:layout_height="36dp"
+                android:text="Opt out of notifications"
+                android:textColor="#494949" />
+        </LinearLayout>
+
     </LinearLayout>
 </ScrollView>
