--- a/code/app/src/main/res/layout/entrant_event_details.xml
+++ b/code/app/src/main/res/layout/entrant_event_details.xml
@@ -251,20 +251,22 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="16dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView4"
-                android:layout_width="148dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Prefrences:"
+                android:text="Preferences:"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
 
             <CheckBox
                 android:id="@+id/optOutCheckBox"
-                android:layout_width="322dp"
+                android:layout_width="wrap_content"
                 android:layout_height="36dp"
                 android:text="Opt out of notifications"
                 android:textColor="#494949" />
