--- a/code/app/src/main/res/layout/notification_history.xml
+++ b/code/app/src/main/res/layout/notification_history.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@android:color/white"
+    android:id="@+id/main"
     tools:context=".NotificationHistoryActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
