--- a/code/app/src/main/res/layout/activity_sign_up.xml
+++ b/code/app/src/main/res/layout/activity_sign_up.xml
@@ -124,6 +124,13 @@
             android:textStyle="bold" />
 
         <CheckBox
+            android:id="@+id/adminCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:text="Admin" />
+
+        <CheckBox
             android:id="@+id/organizerCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
