--- a/code/app/src/main/res/layout/admin_tab.xml
+++ b/code/app/src/main/res/layout/admin_tab.xml
@@ -114,7 +114,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Profiles"
+            android:text="Entrants"
             android:textColor="#494949"
             android:textSize="12sp" />
     </LinearLayout>
