--- a/code/app/src/main/res/layout/entrant_dashboard.xml
+++ b/code/app/src/main/res/layout/entrant_dashboard.xml
@@ -15,7 +15,7 @@
         android:background="@color/white">
 
         <Button
-            android:id="@+id/button_available"
+            android:id="@+id/filterCurrentButton"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -26,7 +26,7 @@
             app:cornerRadius="8dp"/>
 
         <Button
-            android:id="@+id/button_joined"
+            android:id="@+id/filterPastButton"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="6dp"
@@ -83,7 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="24dp"
-                    android:text="No Current Events to\ndisplay right now."
+                    android:text="No Events to\ndisplay right now."
                     android:textAlignment="center"
                     android:textColor="#494949"
                     android:textSize="16sp" />
