--- a/code/app/src/main/res/layout/manage_event.xml
+++ b/code/app/src/main/res/layout/manage_event.xml
@@ -323,7 +323,7 @@
                         android:orientation="vertical">
 
                         <ImageView
-                            android:id="@+id/imageView5"
+                            android:id="@+id/downloadButton"
                             android:layout_width="36dp"
                             android:layout_height="36dp"
                             app:srcCompat="@drawable/download" />
