qr code scanning working now

--- a/code/app/src/main/res/layout/organizer_dashboard_empty.xml
+++ b/code/app/src/main/res/layout/organizer_dashboard_empty.xml
@@ -16,19 +16,30 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/FilterAllButton"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="6dp"
             android:layout_weight="1"
             android:backgroundTint="@color/light_purple"
+            android:text="All"
+            android:textColor="@color/text_color"
+            android:padding="0dp"
+            app:cornerRadius="8dp"/>
+        <Button
+            android:id="@+id/filterActivebutton"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_weight="1"
+            android:backgroundTint="@color/background_grey"
             android:text="Active"
             android:textColor="@color/text_color"
             android:padding="0dp"
             app:cornerRadius="8dp"/>
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/filterClosedButton"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="6dp"
@@ -40,7 +51,7 @@
             app:cornerRadius="8dp"/>
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/filterOngoingButton"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="6dp"
